# friendly-barnacle

./: .gitignore  README.md  docker-compose.yml  example.env  postgres.Dockerfile
f-barnacle/: Cargo.toml
f-barnacle/examples/: unzip.rs
f-barnacle/src/: entity.rs  main.rs
f-barnacle/src/entity/: prelude.rs  tag.rs  video.rs  video_tag_relation.rs
scripts/convert-v-2013/: Cargo.toml
scripts/convert-v-2013/sql/: ddl.sql  export.sql  locad.pgsql  merge.sql
scripts/convert-v-2013/src/: crud.rs  ddl.rs  main.rs  models.rs  v2013.rs  v2016.rs  v2021.rs
