[package]
edition = "2021"
name = "convert-v-2013"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
flate2 = "1.0"
glob = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde-aux = "3.0"
serde_json = "1.0"
serde_with = {version = "1.12", features = ["chrono"]}
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"]}
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
zip = "0.6"
