[package]
edition = "2021"
name = "convert-v-2013"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
csv = "1.1"
flate2 = "1.0"
glob = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde-aux = "4.0"
serde_json = "1.0"
serde_with = {version = "2.0", features = ["chrono"]}
zip = "0.6"
